--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,10 @@
   "description": "",
   "type": "module",
   "main": "index.js",
+
+  "engines": {
+  "node": "18.x"
+},
   "scripts": {
     "start": "node index.js",
     "dev": "npx nodemon index.js"
