--- a/server/package.json
+++ b/server/package.json
@@ -4,10 +4,9 @@
   "description": "",
   "type": "module",
   "main": "index.js",
-
   "engines": {
-  "node": "18.x"
-},
+    "node": "18.x"
+  },
   "scripts": {
     "start": "node index.js",
     "dev": "npx nodemon index.js"
@@ -16,11 +15,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cloudinary": "^2.5.1",
     "cors": "^2.8.5",
+    "debug": "^4.4.3",
     "dotenv": "^16.4.5",
     "express": "^4.21.2",
     "mongoose": "^8.6.0",
-    "cloudinary": "^2.5.1",
     "node-fetch": "^3.3.2"
   }
 }
